# subsynth2

./: Cargo.toml
plugins/examples/gain_gui_iced/src/: editor.rs
plugins/examples/poly_mod_synth/src/: envelope.rs  lib.rs
plugins/examples/sinesynth/: Cargo.toml
plugins/examples/sinesynth/src/: envelop.rs  lib.rs  waveform.rs
plugins/examples/subsynth/: Cargo.toml
plugins/examples/subsynth/src/: editor.rs  filter.rs  lib.rs
plugins/poly_mod_synth/: Cargo.toml
plugins/poly_mod_synth/src/: editor.rs  filter.rs  lib.rs
