[package]
name = "sinesynth"
version = "0.1.0"
edition = "2021"
authors = ["灵林 <taellinglin@gmail.com>"]
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../../../", features = ["assert_process_allocs"] }
enum-iterator = "1.4.1"


rand = "0.8.5"
rand_pcg = "0.3.1"
